--- a/Github/blank-style.css
+++ b/Github/blank-style.css
@@ -10,8 +10,10 @@ h2 {
 h3 {
   text-align: center;
 }
-.middle {
-  text-align: center;
+.image-text-box {
+  text-align: center; 
+  outline-style: dotted;
+  outline-color: Tomato; 
 }
 #Home {
   color: red;
