--- a/Github/blank-style.css
+++ b/Github/blank-style.css
@@ -10,7 +10,7 @@ h2 {
 h3 {
   text-align: center;
 }
-.image-text-box {
+img {
   text-align: center; 
   outline-style: dotted;
   outline-color: Tomato; 
