--- a/Github/blank-style.css
+++ b/Github/blank-style.css
@@ -1,3 +1,6 @@
+body {
+  backgrounf-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
+}
 div {
   background-color: lightgreen;
 }
