--- a/Github/blank-style.css
+++ b/Github/blank-style.css
@@ -13,6 +13,12 @@ h2 {
 h3 {
   text-align: center;
 }
+.image-text-box {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
 img {
   img-align: center; 
   outline-style: dotted;
