--- a/Github/blank-style.css
+++ b/Github/blank-style.css
@@ -4,13 +4,7 @@ body {
 div {
   background-color: lightgreen;
 }
-h1 {
-  text-align: center;
-}
-h2 {
-  text-align: center;
-}
-h3 {
+h1, h2, h3 {
   text-align: center;
 }
 .image-text-box {
