--- a/Github/blank-style.css
+++ b/Github/blank-style.css
@@ -1,5 +1,5 @@
 body {
-  backgrounf-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
+  background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
 }
 div {
   background-color: lightgreen;
