--- a/Github/review-style.css
+++ b/Github/review-style.css
@@ -1,3 +1,9 @@
-*{
+body{
   background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
+}
+.center{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
