--- a/Github/review-style.css
+++ b/Github/review-style.css
@@ -1,5 +1,5 @@
 body{
-  background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
+  background-image: linear-gradient(to left, #FF33CA, #FF33DD, #FF33F3, #EC33FF, #DD33FF, #CA33FF, #C433FF);
 }
 .center{
   display: block;
