--- a/Github/review-style.css
+++ b/Github/review-style.css
@@ -7,3 +7,14 @@ body{
   margin-right: auto;
   width: 50%;
 }
+img {
+ animation: a 3s infinite linear;
+}
+@keyframes a {
+  0% {transform: rotate(0deg)
+     }
+  50% {transform: rotate(180deg)
+    }
+  100% {transform: rotate(360deg)
+     }
+}
