--- a/Weihnachten-style.css
+++ b/Weihnachten-style.css
@@ -7,7 +7,7 @@
 	position:relative;
 	height:50%;
 	top: 15%;
-	left: 30%;
+	left: 2%;
  animation: a 3s infinite linear;
 }
 @keyframes a {
@@ -19,4 +19,9 @@
   100% {transform: rotate(360deg)
      }
 }
-
+.rentier{
+	position:relative;
+	height:50%;
+	bottom:-180px;
+	float:left;
+}
